# pydir

./: LICENSE  pyproject.toml  setup.py
src/pydir/: __init__.py  __main__.py  cli.py  tree.py  utils.py
